# quadruped_robot_ros2_code

./: README.md
interface_type/: CMakeLists.txt  package.xml
interface_type/msg/: MotorCommand.msg  MotorPd.msg  MotorState.msg
leg_rotates/: package.xml  setup.cfg  setup.py
leg_rotates/launch/: motor_control.launch.py
leg_rotates/leg_rotates/: motor_controller.py  motor_rotates.py
unitree_hardware_interface/: CMakeLists.txt  package.xml  unitree_hardware_interface.xml
unitree_hardware_interface/config/: quadruped_controllers.yaml
unitree_hardware_interface/description/: quadruped.urdf.xacro
unitree_hardware_interface/include/unitree_hardware_interface/: unitree_hardware_interface.hpp
unitree_hardware_interface/launch/: ros2_control.launch.py
unitree_hardware_interface/scripts/: send_trajectory.py
unitree_hardware_interface/src/: unitree_hardware_interface.cpp
unitree_lib/: package.xml  setup.cfg  setup.py
unitree_lib/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
unitree_lib/log/: latest_build
yesense_std_ros2/: CMakeLists.txt
