<?xml version="1.0"?>
<package format="3">
  <name>unitree_hardware_interface</name>
  <version>0.1.0</version>
  <description>ros2_control hardware interface for Unitree GO-M8010-6 motors</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
